unpackaged/main/default/objects/RICSC_RelationType__c/RICSC_RelationType__c.object-meta.xml
<CustomObject>
    <description>Relation Type object is used to store all the possible relations type that will be selected in the Relation Object</description>
    <label>Relation Type</label>
    <nameField>
        <label>Relationship Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relation Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>