unpackaged/main/default/objects/RICSC_RelationType__c/fields/RICSC_CreateInverseRole__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CreateInverseRole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used to control if automatically in a particular role there should be created inversed relation</description>
        <label>Create Inverse Role</label>
        <type>Checkbox</type>
    </CustomField>