unpackaged/main/default/objects/RICSC_RelationType__c/fields/RICSC_InverseRelationshipRole__c.field-meta.xml
<CustomField>
        <fullName>RICSC_InverseRelationshipRole__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to link to the inverse role</description>
        <label>Inverse Relationship Role</label>
        <referenceTo>RICSC_RelationType__c</referenceTo>
        <relationshipLabel>Relation Types</relationshipLabel>
        <relationshipName>RICSC_RelationTypesInvRelationshipRole</relationshipName>
        <type>Lookup</type>
    </CustomField>