unpackaged/main/default/objects/RICSC_RelationType__c/fields/RICSC_InverseRoleName__c.field-meta.xml
<CustomField>
        <fullName>RICSC_InverseRoleName__c</fullName>
        <description>This is the inverse role name (e.g. Son)</description>
        <label>Inverse Role Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>